--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.4.0",
     "astro": "^4.5.10",
+    "hotkeypad": "^0.1.1",
     "svelte": "^4.2.12",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3"
