--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,14 @@
 {
   "cSpell.words": [
+    "astro",
     "astrojs",
     "Bitstream",
+    "hotkeypad",
     "Menlo",
     "minmax",
     "rgba",
     "tsconfigs"
-  ]
+  ],
+  "IDX.aI.enableInlineCompletion": true,
+  "IDX.aI.enableCodebaseIndexing": true
 }
