--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
     "Menlo",
     "minmax",
     "rgba",
-    "tsconfigs"
+    "tsconfigs",
+    "webp"
   ],
   "IDX.aI.enableInlineCompletion": true,
   "IDX.aI.enableCodebaseIndexing": true
